--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "castv2-client": "^1.2.0",
+    "chromecasts": "^1.9.0",
     "express": "^4.15.3",
     "google-home-notifier": "^1.0.0",
     "hs100-api": "^0.4.0",
